# Facultad

./: .gitignore  .markdownlint.json  README.md
Semestre-1/CADP/: README.md
Semestre-1/Organizacion de Computadoras/: README.md
Semestre-2/Arquitectura_de_Computadoras/: README.md
Semestre-2/Taller_de_Programacion/: README.md
Semestre-3/FOD/: Resumen_FOD.docx
Semestre-3/Ingles/: Examen ejemplo moodle .docx  Examen-FEB25.docx  Parcial Modelo (1).docx
Semestre-3/RUST/Practica/tps/: Cargo.toml  ayuda.rs  logs_errores.txt  tarpaulin-report.html
Semestre-3/RUST/Practica/tps/src/: main.rs
Semestre-3/RUST/Practica/tps/src/tp02/: ej01.rs  ej02.rs  ej03.rs  ej04.rs  ej05.rs  ej06.rs  ej07.rs  ej08.rs  ej09.rs  ej10.rs  ej11.rs  ej12.rs  ej13.rs  ej14.rs  mod.rs
Semestre-3/RUST/Practica/tps/src/tp03/: ej01.rs  ej02.rs  ej03.rs  ej04.rs  ej05.rs  ej06 - copia.rs  ej06.rs  ej07.rs  ej07v2.rs  ej08.rs  ej08v2.rs  ej09.rs  ej09v2.rs  ej10.rs  mod.rs  nicolas_carrica_v1.rs  nicolas_carrica_v2.rs
Semestre-3/RUST/Practica/tps/src/tp04/: ej01.rs  ej02.rs  ej03.rs  ej04.rs  ej04_v2 - copia.rs  ej04_v2.rs  ej05.rs  ej05_v3.rs  ej05v1.rs  mod.rs  nicolas_carrica_e2_v2.rs
Semestre-3/RUST/Practica/tps/src/tp05/: ej01.rs  ej02.rs  ej03.rs  ej04.rs  ej05.rs  ej06.rs  fecha.rs  mod.rs  transacciones.json  usuarios.json
Semestre-3/RUST/Practica/tps/tests/: canciones_test.json  copias_test.json  prestamos_test.json
Semestre-3/Taller_Ingles/: Examenes.docx
Semestre-4/INGENIERIA_SOFTWARE_1/: Resumen Inge Guaymas.docx
Semestre-4/ISO/: ISO-RESUMEN.docx
(+840 files in other folders)
