[package]
name = "tps"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"

# serde is just for the example, not required in general
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"

cargo-tarpaulin = "0.32.5"
rand = "0.9.1"
